<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>mx.com.sw.services</groupId>
    <artifactId>sw-java-toolkit</artifactId>
    <version>0.0.1</version>
    <packaging>jar</packaging>

    <scm>
        <url>https://github.com/lunasoft/sw-java-toolkit</url>
        <connection>scm:git:git@github.com:lunasoft/sw-java-toolkit.git</connection>
        <developerConnection>scm:git:git@github.com:lunasoft/sw-java-toolkit.git</developerConnection>

    </scm>
    <licenses>
        <license>
            <name>GNU General Public License (GPL)</name>
            <url>http://www.gnu.org/licenses/gpl.txt</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <id>RichBarusta</id>
            <name>Ricardo Barusta</name>
            <email>ricardo.barusta@sw.com.mx</email>
            <url>https://github.com/rbarusta</url>
            <organization>Smarter Web</organization>
            <organizationUrl>https://sw.com.mx/</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
            <properties>
                <picUrl>https://media.licdn.com/media/AAEAAQAAAAAAAAYGAAAAJDY3NWU0NTkxLWMxOTctNGQ2NC1hMWYwLWQ4NzM4ZjI1OTE5ZQ.jpg</picUrl>
            </properties>
        </developer>
        <developer>
            <id>guadalupe.alvarado</id>
            <name>Maria Guadalupe Alvarado</name>
            <email>guadalupe.alvarado@sw.com.mx</email>
            <url>https://github.com/lupineka</url>
            <organization>Smarter Web</organization>
            <organizationUrl>https://sw.com.mx/</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
            <properties>
                <picUrl>https://media.licdn.com/media/AAEAAQAAAAAAAAYGAAAAJDY3NWU0NTkxLWMxOTctNGQ2NC1hMWYwLWQ4NzM4ZjI1OTE5ZQ.jpg</picUrl>
            </properties>
        </developer>
        <developer>
            <id>emmanuel.contreras</id>
            <name>Emmanuel Contreras</name>
            <email>emmanuel.contreras@sw.com.mx</email>
            <url>https://github.com/ecs515</url>
            <organization>Smarter Web</organization>
            <organizationUrl>https://sw.com.mx/</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
            <properties>
                <picUrl>https://avatars2.githubusercontent.com/u/30845192</picUrl>
            </properties>
        </developer>
    </developers>
    <name>${project.groupId}:${project.artifactId}</name>
    <description>SW SDK JAVA</description>
    <url>https://sw.com.mx/</url>
    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>
    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <testSourceDirectory>src/test/java</testSourceDirectory>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <id>create-my-bundle</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.5.1</version>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>1.6</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>1.6.3</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.1.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.10.4</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <additionalparam>-Xdoclint:none</additionalparam>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-xml</artifactId>
            <version>2.9.4</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.apache.xmlbeans/xmlbeans -->
        <dependency>
            <groupId>org.apache.xmlbeans</groupId>
            <artifactId>xmlbeans</artifactId>
            <version>2.3.0</version>
        </dependency>

        <dependency>
            <groupId>org.apache.servicemix.bundles</groupId>
            <artifactId>org.apache.servicemix.bundles.not-yet-commons-ssl</artifactId>
            <version>0.3.11_1</version>
        </dependency>

    </dependencies>

    
</project>